@@ -98,6 +98,7 @@ Developed with contributions by
     Nicholas J. Humfrey <njh@ecs.soton.ac.uk>
     Joel Ebel <jbebel@ncsu.edu>
     <jochen2@users.sourceforge.net>
+	Alexander Vlasov <zulu@galaradio.com>
 
 .SH LINKS
 Project homepage:
